# organify

./: .gitignore  .gitmodules  Cargo.toml  README.md
res/shaders/: cell.frag  cell.vert  grid.frag  grid.vert  world.frag  world.vert
src/: consts.rs  grid.rs  idx_obj_vec.rs  lib.rs  light.rs  main.rs  render_data.rs  traits.rs  world.rs
src/cell/: mod.rs
src/control/: camera.rs  mod.rs  mouse.rs
src/game/: components.rs  mod.rs
src/idx_obj_vec/: iter.rs  mod.rs
src/logic/: behavior.rs  mod.rs  physics.rs  traits.rs
src/objects/: cell.rs  mod.rs  world.rs
src/objects/grid/: cell.rs  mod.rs
src/opengl/: mod.rs  prelude.rs  program.rs  shader.rs  traits.rs
src/render/: mod.rs  traits.rs
src/ui/: debug_tools.rs  mod.rs
