[package]
name = "organify"
description = ""
version = "0.0.1"
edition = "2021"
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license = "GPL-3.0"
readme = "./README.md"
rust-version = "1.80.0"

[dependencies]
nalgebra = "0.33.0"
gl = "0.14.0"
rand = "*"
log = { version = "0.4.22", optional = true }
env_logger = { version = "0.11.5", optional = true }
vector-growing = "0.1.0"

egui = "0.29.1"
glfw = "0.58.0"
egui_glfw = { path = "./libs/egui_glfw" }

[features]
log = ["dep:log", "dep:env_logger"]